--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,14 +4,144 @@
     box-sizing: border-box;
 }
 
-/* body {
+body {
+    overflow: hidden;
+    font-family: 'Silkscreen', cursive;
+}
+
+.game-menu {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    text-align: center;
+    color: white;
+    background-color: #1db817;
+}
+
+.game-menu > h1 {
+    margin-top: 40px;
+    font-size: 2.6rem;
+}
+
+.game-menu > p {
+    position: absolute;
+    width: 100%;
+    bottom: 16px;
+    left: 50%;
+    text-align: center;
+    transform: translateX(-50%);
+}
+
+.game-menu > p > a {
+    cursor: pointer;
+}
+
+.menu-buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 120px;
+    max-width: 250px;
+}
+
+.button {
+    display: block;
+    text-align: center;
+    width: 100%;
+    margin-top: 14px;
+    padding: 8px 12px;
+    font-family: 'Silkscreen', cursive;
+    font-size: 1.4rem;
+    border-radius: 12px;
+    border: 3px solid white;
+    color: white;
+    cursor: pointer;
+}
+
+.menu-buttons__button {
+    background-color: #1db817;
+    transition: all .5s;
+}
+
+.menu-buttons__button:hover {
+    background-color: white;
+    color: #1db817;
+    transform: scale(1.1);
+}
+
+.game-messages {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+.game-messages > p {
+    font-size: 1.2rem;
+    margin-top: 8px;
+}
+
+.game-messages--win {
+    display: none;
+    background-color: #1db817;
+}
+
+.game-messages--lose {
+    display: none;
+    background-color: #d12d17;
+}
+
+.game-messages > h1 {
+    font-size: 2.6rem;
+}
+
+.messages-buttons {
+    margin-top: 70px;
+}
+
+/* .messages__button {
     
 } */
+#new-record {
+    display: none;
+}
+
+.messages__button--win {
+    background-color: #1db817;
+}
+
+.messages__button--win:hover {
+    background-color: white;
+    color: #1db817;
+}
+
+.messages__button--lose {
+    background-color: #d12d17;
+}
+
+.messages__button--lose:hover {
+    background-color: white;
+    color: #d12d17;
+}
 
 .game-container {
     width: 100%;
     padding: 20px;
     min-width: 320px;
+}
+
+.level-indicator {
+    margin-bottom: 8px;
+    text-align: center;
 }
 
 canvas {
@@ -37,7 +167,7 @@ canvas {
     display: block;
 }
 
-.buttons {
+.control-buttons {
     width: 250px;
     height: 200px;
     margin: 0 auto;
@@ -48,34 +178,34 @@ canvas {
     row-gap: 5px;
 }
 
-.buttons__up {
+.control-buttons__up {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
 }
 
-.buttons__left {
+.control-buttons__left {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
 }
 
-.buttons__right {
+.control-buttons__right {
     grid-column: 3 / 4;
     grid-row: 2 / 3;
 }
 
-.buttons__down {
+.control-buttons__down {
     grid-column: 2 / 3;
     grid-row: 3 / 4;
 }
 
-button {
+.control-button {
     border: 2px solid #26799d;
     /* background-color: #d6d6d6; */
     /* color: ; */
 }
 
 @media (min-width: 1024px) {
-    .buttons {
+    .control-buttons {
         display: none;
     }
 }
